@@ -43,5 +43,5 @@ tasks.named('test') {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs.add("-parameters")
+    options.compilerArgs.addAll(['-parameters', '-proc:full'])
 }
